--- a/register.html
+++ b/register.html
@@ -24,7 +24,7 @@
     <header class="sticky top-0 bg-white shadow-md z-10">
         <nav class="container mx-auto py-4 flex justify-between items-center">
             <h1><a href="index.html#home" class="text-2xl font-bold text-blue-600">ISAC</a> <span class="text-2xl text-gray-500 font-semibold tracking-tight">|</span> 
-                <span class="text-xl text-gray-500 font-semibold tracking-tight"> International Study & Admission Consultants</span>
+                <span class="text-xl text-gray-500 font-semibold tracking-tight"> International Study & Admissions Consultancy</span>
             </h1>
             <ul class="flex space-x-6">
                 <li><a href="index.html#home" class="text-gray-700 hover:text-blue-600">Home</a></li>
