--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
             <h1>
                 <a href="#home" class="text-2xl md:text-3xl font-bold text-blue-600 hover:text-blue-700 transition-colors">ISAC</a> 
                 <span class="text-2xl md:text-3xl text-gray-500 font-semibold tracking-tight">|</span> 
-                <span class="text-xl md:text-2xl text-gray-500 font-semibold tracking-tight"> International Study & Admission Consultants</span>
+                <span class="text-xl md:text-2xl text-gray-500 font-semibold tracking-tight"> International Study & Admissions Consultancy</span>
             </h1>
             <ul class="flex flex-wrap space-x-4 md:space-x-8 items-center mt-2 md:mt-0">
                 <li><a href="#home" class="text-gray-700 hover:text-blue-600 transition-colors text-sm md:text-base">Home</a></li>
