--- a/index.html
+++ b/index.html
@@ -328,9 +328,9 @@
             <p id="why-italy-content" class="text-center mb-8 md:mb-10 text-gray-700 text-sm sm:text-base md:text-lg max-w-4xl mx-auto leading-relaxed">Experience world-class engineering education in Italy, blending cutting-edge innovation with rich cultural heritage.</p>
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 md:gap-8">
                 <div class="p-6 bg-gray-50 rounded-lg shadow-md card"><i class="fas fa-globe-europe text-blue-600 text-2xl md:text-3xl mb-4"></i><h3 class="font-bold text-lg md:text-xl mb-2">Study in English</h3><p class="text-gray-600 text-sm md:text-base">Engineering degrees fully in English.</p></div>
-                <div class="p-6 bg-gray-50 rounded-lg shadow-md card"><i class="fas fa-check-circle text-green-600 text-2xl md:text-3xl mb-4"></i><h3 class="font-bold text-lg md:text-xl mb-2">Stress-Free Admissions</h3><p class="text-gray-600 text-sm md:text-base">Guided application and exam prep.</p></div>
-                <div class="p-6 bg-gray-50 rounded-lg shadow-md card"><i class="fas fa-euro-sign text-blue-600 text-2xl md:text-3xl mb-4"></i><h3 class="font-bold text-lg md:text-xl mb-2">Affordable Education</h3><p class="text-gray-600 text-sm md:text-base">Low tuition fees for engineering.</p></div>
-                <div class="p-6 bg-gray-50 rounded-lg shadow-md card"><i class="fas fa-award text-green-600 text-2xl md:text-3xl mb-4"></i><h3 class="font-bold text-lg md:text-xl mb-2">Scholarships</h3><p class="text-gray-600 text-sm md:text-base">Engineering-specific opportunities.</p></div>
+                <div class="p-6 bg-gray-50 rounded-lg shadow-md card"><i class="fas fa-euro-sign text-blue-600 text-2xl md:text-3xl mb-4"></i><h3 class="font-bold text-lg md:text-xl mb-2">Affordable Education</h3><p class="text-gray-600 text-sm md:text-base">Affordable fees or no fees at all.</p></div>
+                <div class="p-6 bg-gray-50 rounded-lg shadow-md card"><i class="fas fa-award text-green-600 text-2xl md:text-3xl mb-4"></i><h3 class="font-bold text-lg md:text-xl mb-2">Scholarships</h3><p class="text-gray-600 text-sm md:text-base">Scholarships upto  <strong>€8,000 anually</strong>.</p></div>
+                <div class="p-6 bg-gray-50 rounded-lg shadow-md card"><i class="fas fa-check-circle text-green-600 text-2xl md:text-3xl mb-4"></i><h3 class="font-bold text-lg md:text-xl mb-2">Gateway to Europe</h3><p class="text-gray-600 text-sm md:text-base">Visa access for 29 Europe counties.</p></div>
             </div>
         </div>
     </section>
