--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
     </section>
 
     <section id="tolc" class="container mx-auto bg-gray-100">
-        <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold text-center mb-8 md:mb-10 animate-fadeInUp">Entrance Exam Prep - TOLC-I</h2>
+        <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold text-center mb-8 md:mb-10 animate-fadeInUp">Entrance Exam Prep</h2>
         <p id="tolc-description" class="text-sm sm:text-base md:text-lg text-gray-700 mb-6 md:mb-8 max-w-4xl mx-auto leading-relaxed">Prepare for the TOLC-I entrance exam for engineering programs in Italy. It consists of 50 MCQ questions over 1 hour and 50 minutes, available online at home for €39.</p>
         <div class="flex flex-col md:flex-row gap-6 md:gap-8 exam-prep-container max-w-4xl mx-auto">
             <div class="w-full md:w-1/2 flex flex-col gap-4 md:gap-6">
@@ -384,7 +384,7 @@
                 <div class="animated-widget"><i class="fas fa-question-circle text-blue-600"></i>Multiple Choice</div>
                 <div class="accordion-content text-gray-700 text-sm md:text-base">50 multiple-choice questions covering key engineering topics.</div>
                 <div class="animated-widget"><i class="fas fa-laptop text-blue-600"></i>Online at Home</div>
-                <div class="accordion-content text-gray-700 text-sm md:text-base">Take the exam online from home for only €39, making it accessible and affordable.</div>
+                <div class="accordion-content text-gray-700 text-sm md:text-base">Take the exam online from home, making it accessible and affordable.</div>
             </div>
             <div class="w-full md:w-1/2">
                 <img src="resources/classroom.jpg" alt="Entrance Exam Prep Classroom" class="w-full rounded-lg shadow-lg">
@@ -452,8 +452,7 @@
         <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold text-center mb-8 md:mb-10 animate-fadeInUp">Contact Us</h2>
         <div class="text-center text-sm sm:text-base md:text-lg text-gray-700 max-w-4xl mx-auto leading-relaxed">
             <p class="mb-4"><i class="fas fa-envelope text-blue-600 mr-2 md:mr-3 text-xl md:text-2xl"></i>Email: <a href="mailto:info@isac.edu" class="text-blue-600 hover:underline">info@isac.edu</a></p>
-            <p class="mb-4"><i class="fas fa-phone text-blue-600 mr-2 md:mr-3 text-xl md:text-2xl"></i>Phone: <a href="tel:+390123456789" class="text-blue-600 hover:underline">+39 012 345 6789</a></p>
-            <p class="mb-4"><i class="fas fa-map-marker-alt text-blue-600 mr-2 md:mr-3 text-xl md:text-2xl"></i>Address: Via dell'Università 123, 00100 Rome, Italy</p>
+            <p class="mb-4"><i class="fas fa-phone text-blue-600 mr-2 md:mr-3 text-xl md:text-2xl"></i>Phone: <a href="tel:+94702698131xt-blue-600 hover:underline">+94 70 260 81 31</a></p>
             <p class="mt-6">Reach out to us for any inquiries about engineering programs, admissions, or scholarships. We're here to help you start your journey!</p>
         </div>
     </section>
