--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
     <section id="contact" class="container mx-auto bg-gray-100">
         <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold text-center mb-8 md:mb-10 animate-fadeInUp">Contact Us</h2>
         <div class="text-center text-sm sm:text-base md:text-lg text-gray-700 max-w-4xl mx-auto leading-relaxed">
-            <p class="mb-4"><i class="fas fa-envelope text-blue-600 mr-2 md:mr-3 text-xl md:text-2xl"></i>Email: <a href="mailto:info@isac.edu" class="text-blue-600 hover:underline">info@isac.edu</a></p>
+            <p class="mb-4"><i class="fas fa-envelope text-blue-600 mr-2 md:mr-3 text-xl md:text-2xl"></i>Email: <a href="mailto:info@internationalstudyandadmissions.com" class="text-blue-600 hover:underline">info@internationalstudyandadmissions.com</a></p>
             <p class="mb-4"><i class="fas fa-phone text-blue-600 mr-2 md:mr-3 text-xl md:text-2xl"></i>Phone: <a href="tel:+94702698131xt-blue-600 hover:underline">+94 70 260 81 31</a></p>
             <p class="mt-6">Reach out to us for any inquiries about engineering programs, admissions, or scholarships. We're here to help you start your journey!</p>
         </div>
