--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                 <div class="p-6 bg-gray-50 rounded-lg shadow-md card"><i class="fas fa-globe-europe text-blue-600 text-2xl md:text-3xl mb-4"></i><h3 class="font-bold text-lg md:text-xl mb-2">Study in English</h3><p class="text-gray-600 text-sm md:text-base">Engineering degrees fully in English.</p></div>
                 <div class="p-6 bg-gray-50 rounded-lg shadow-md card"><i class="fas fa-euro-sign text-blue-600 text-2xl md:text-3xl mb-4"></i><h3 class="font-bold text-lg md:text-xl mb-2">Affordable Education</h3><p class="text-gray-600 text-sm md:text-base">Affordable fees or no fees at all.</p></div>
                 <div class="p-6 bg-gray-50 rounded-lg shadow-md card"><i class="fas fa-award text-green-600 text-2xl md:text-3xl mb-4"></i><h3 class="font-bold text-lg md:text-xl mb-2">Scholarships</h3><p class="text-gray-600 text-sm md:text-base">Scholarships upto  <strong>€8,000 anually</strong>.</p></div>
-                <div class="p-6 bg-gray-50 rounded-lg shadow-md card"><i class="fas fa-check-circle text-green-600 text-2xl md:text-3xl mb-4"></i><h3 class="font-bold text-lg md:text-xl mb-2">Gateway to Europe</h3><p class="text-gray-600 text-sm md:text-base">Visa access for 29 Europe counties.</p></div>
+                <div class="p-6 bg-gray-50 rounded-lg shadow-md card"><i class="fas fa-check-circle text-green-600 text-2xl md:text-3xl mb-4"></i><h3 class="font-bold text-lg md:text-xl mb-2">Gateway to Europe</h3><p class="text-gray-600 text-sm md:text-base">Visa access for 29 Europe countries.</p></div>
             </div>
         </div>
     </section>
